--- a/quizz-app/index.html
+++ b/quizz-app/index.html
@@ -10,7 +10,7 @@
     <div class="content">
         <h1>Simple Quizz</h1>
         <div class="app">
-            <h2>Question goes here</h2>
+            <h2 class="question">Question goes here</h2>
             <div class="answer-btns">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
@@ -20,5 +20,6 @@
             <button class="next">Next</button>
         </div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
